@startuml
'https://plantuml.com/class-diagram

hide empty members

enum Player

Game --> Player : first
Game -> Board : board

class Board <<(T)>>
<> MapEntry
Board --> "*" MapEntry
Player <- MapEntry : value
MapEntry --> Position : key

class GameState <<sealed>>
Game --> GameState : state
GameState <|-- Draw
GameState <|-- Run
GameState <|-- Win

class Draw <<(O,orange)>>
Player <-- Run : turn
Player <-- Win : winner

Game --> Score : score

ClashRun --> Game : game
ClashRun --> Player : sidePlayer
Name <- ClashRun : name

Clash <|-- ClashRun
GameStorage <- Clash : storage
class GameStorage <<(T)>>
@enduml